--- a/components/package.json
+++ b/components/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint \"**/*.{js,ts}\"",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook -c .storybook -o dist",
-    "build": "tsc --outDir ./dist/ --module es2015"
+    "build": "tsc --outDir ./dist/ --module es2015",
+    "chromatic": "npx chromatic --project-token=da895ea671ad"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -25,7 +26,6 @@
     "eslint": "^8.2.0",
     "lit-css-loader": "^1.2.1",
     "storybook-addon-designs": "^6.2.0",
-    "storybook-contrast": "^0.11.6",
     "typescript": "^4.4.4"
   }
 }
