--- a/components/package.json
+++ b/components/package.json
@@ -16,16 +16,20 @@
     "@babel/plugin-proposal-decorators": "^7.16.0",
     "@babel/plugin-proposal-private-methods": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@storybook/addon-a11y": "^6.3.12",
     "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-backgrounds": "^6.3.12",
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-knobs": "^6.3.1",
     "@storybook/addon-links": "^6.3.12",
+    "@storybook/addon-measure": "^6.4.0-alpha.27",
     "@storybook/web-components": "^6.3.12",
     "babel-loader": "^8.2.3",
     "chromatic": "^6.0.6",
     "eslint": "^8.2.0",
     "lit-css-loader": "^1.2.1",
     "storybook-addon-designs": "^6.2.0",
+    "storybook-addon-outline": "^1.4.1",
     "typescript": "^4.4.4"
   }
 }
